update swag file
