# docs/swagger.json
@@ -25,6 +25,7 @@
                     "application/json"
                 ],
                 "summary": "Fetch all todos",
+                "operationId": "fetch-all-todos",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -64,6 +65,7 @@
                     "application/json"
                 ],
                 "summary": "Create a todo",
+                "operationId": "create-todo",
                 "parameters": [
                     {
                         "description": "Label of the task to do",
@@ -110,6 +112,7 @@
                     "application/json"
                 ],
                 "summary": "Fetch a todo",
+                "operationId": "fetch-single-todo",
                 "parameters": [
                     {
                         "type": "integer",
@@ -155,6 +158,7 @@
                     "application/json"
                 ],
                 "summary": "Update a todo",
+                "operationId": "update-todo",
                 "parameters": [
                     {
                         "type": "integer",
@@ -213,6 +217,7 @@
                     "application/json"
                 ],
                 "summary": "Delete a todo",
+                "operationId": "delete-todo",
                 "parameters": [
                     {
                         "type": "integer",
